Fix 'Turn editing on button not visible in courses with Sandstone swatch' - #11.

--- a/scss/theme/_header.scss
+++ b/scss/theme/_header.scss
@@ -1,4 +1,5 @@
 .pageheadingbutton .btn {
     background-color: transparent;
     border-color: transparent;
+    color: $body-color;
 }
